<resources>
    <string name="app_name">EnLife</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_hav_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_hav_acc">Already have an account?</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>

    <string name="wt_note_1">Keep your work organized and quickly check your reminders with simple calendar.</string>
    <string name="wt_note_2">Get warned when you consume the restricted apps after the agreed time.</string>
    <string name="wt_note_3">Use this app\'s guidance system in order to stay on track of achieving your goals.</string>
    <string name="ok_im_in">Ok, I\'m in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="overview">Overview</string>
    <string name="groups">Groups</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="sat">SAT</string>
    <string name="schedule_for">Schedule for %s</string>
    <string name="no_events_for_this_day">No events for this day</string>
    <string name="goals">Goals</string>
    <string name="analysis">Analysis</string>
    <string name="notes">Notes</string>
    <string name="good_thoughts">Good Thoughts</string>
    <string name="stocism">Stoicism</string>
    <string name="habit_tracking">Habit Tracking</string>
    <string name="add_title">Add Title</string>
    <string name="short_description">Short description</string>
    <string name="annual">Annual</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="custom">Custom</string>
    <string name="goal_type">Goal Type</string>
    <string name="daily_schedule_to_goal">Daily schedule to achieve goal</string>
    <string name="add_task">Add Task</string>
    <string name="add_milestone">Add Milestone</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="add">Add</string>
    <string name="click_on_date">[Click on dates for selection]</string>
    <string name="click_on_time">[Click on time for selection]</string>
    <string name="ok">ok</string>
    <string name="attach_this_ms_to_goal">Attach this milestone to goal</string>
    <string name="add_event">Add Event</string>
    <string name="plz_goal_duration">Please select goal duration</string>
    <string name="plz_milestone_duration">Please select milestone duration</string>
    <string name="goal_is_saved">Goal is saved!</string>
    <string name="plz_select_valid_time">Please select valid time</string>
    <string name="save_goal">Save Goal</string>
    <string name="events">Events</string>
    <string name="plz_add_milestones">Please add milestones</string>
    <string name="daily_schedule">Daily Schedule</string>
</resources>