<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/item2"
            android:title="@string/overview" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/item3"
            android:title="@string/groups" />
    </group>

    <group android:id="@+id/grp4">
        <item
            android:id="@+id/item4"
            android:title="@string/lists" />
    </group>

    <group android:id="@+id/grp5">
        <item
            android:id="@+id/item5"
            android:title="@string/profile" />
    </group>

    <group android:id="@+id/grp6">
        <item
            android:id="@+id/item6"
            android:title="@string/timeline" />
    </group>

    <group android:id="@+id/grp7">
        <item
            android:id="@+id/item7"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/grp8">
        <item
            android:id="@+id/item8"
            android:title="@string/logout" />
    </group>

</menu>