<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.enlife.app.screens.widgets.CustomToolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_milestone_title"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editext_bg"
        android:hint="@string/enter_title"
        android:maxLines="2"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/greyText" />


    <EditText
        android:id="@+id/edt_milestone_description"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:background="@drawable/editext_bg"
        android:hint="@string/enter_description"
        android:maxLines="5"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/greyText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:gravity="center">

        <com.enlife.app.screens.widgets.DateDurationChooserView
            android:id="@+id/duration_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lin_add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_size_30"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_size_50"
                android:layout_height="@dimen/dimen_size_50"
                android:src="@drawable/add" />

            <TextView
                style="@style/BasicText"
                android:text="@string/add_event" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_milstone"
        style="@style/BasicButton"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:drawablePadding="0dp"
        android:minHeight="@dimen/dimen_size_30"
        android:text="@string/attach_this_ms_to_goal" />

</LinearLayout>