<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        tools:context=".screens.signup.SignUpActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_signup_title"
            style="@style/BasicText"
            android:layout_margin="@dimen/dimen_size_15"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_30"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_title">

            <EditText
                android:id="@+id/edt_name"
                style="@style/BasicEditText"
                android:background="@drawable/editext_bg"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="@dimen/dimen_size_15"
                android:fontFamily="@font/avenir_light"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/BasicEditText"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:background="@drawable/editext_bg"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/dimen_size_15"
                android:fontFamily="@font/avenir_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/BasicEditText"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:background="@drawable/editext_bg"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dimen_size_15"
                android:fontFamily="@font/avenir_light"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/BasicEditText"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dimen_size_15"
                android:fontFamily="@font/avenir_light"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txt_birth_date"
                style="@style/BasicEditText"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:background="@drawable/editext_bg"
                android:drawablePadding="@dimen/dimen_size_15"
                android:fontFamily="@font/avenir_light"
                android:hint="@string/birthday"
                app:drawableStartCompat="@drawable/ic_birthday" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_bottom_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/BasicButton"
                android:layout_width="match_parent"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/txt_login_link"
                style="@style/BasicText"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_size_15"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>