<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".screens.main.fragments.login.LoginActivity">


    <ImageView
        android:id="@+id/img_login_checkmark"
        android:layout_width="@dimen/dimen_size_150"
        android:layout_height="@dimen/dimen_size_150"
        android:layout_marginTop="@dimen/dimen_size_50"
        android:src="@drawable/login_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_size_80"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/lin_bottom_actions">

        <EditText
            android:id="@+id/edt_email"
            style="@style/BasicEditText"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="@dimen/dimen_size_15"
            android:fontFamily="@font/avenir_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@color/white" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/BasicEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_size_30"
            android:background="@drawable/editext_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen_size_15"
            android:fontFamily="@font/avenir_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_size_15"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@color/white" />

        <TextView
            android:id="@+id/txt_forgot_password"
            style="@style/BasicText"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:text="@string/forgot_password"
            android:textColor="@color/greyText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_bottom_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/BasicButton"
            android:layout_width="match_parent"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/txt_signup_link"
            style="@style/BasicText"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_size_15"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>